--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -33,7 +33,7 @@
 
 <div>
   <label>Cover</label>
-  <input type="file" name="cover" />
+  <input type="file" name="cover" class="filepond" />
 </div>
 
 <div>
